<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="31dp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/roboto"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/resetPwButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="118dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="118dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/roboto"
        android:text="@string/forgotPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextName"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="191dp"
        android:layout_marginEnd="16dp"
        android:background="@color/inputBoxBgColor"
        android:ems="10"
        android:textAppearance="@style/InputBoxTextStyle"
        android:textColor="#99000000"
        android:textColorHint="#99000000"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/InputBoxTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:background="@color/inputBoxBgColor"
        android:ems="10"
        android:textAppearance="@style/InputBoxTextStyle"
        android:textColor="#99000000"
        android:textColorHint="#99000000"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="2dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextName"
        app:layout_constraintStart_toStartOf="@+id/editTextTextName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextName">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/InputBoxTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>