<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextName"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="486dp"
        android:background="@color/inputBoxBgColor"
        android:ems="10"
        android:textAppearance="@style/InputBoxTextStyle"
        android:textColor="#99000000"
        android:textColorHint="#99000000"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/InputBoxTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextSurname"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="182dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="402dp"
        android:background="@color/inputBoxBgColor"
        android:ems="10"
        android:textAppearance="@style/InputBoxTextStyle"
        android:textColor="#99000000"
        android:textColorHint="#99000000"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/InputBoxTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextMail"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="266dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="318dp"
        android:background="@color/inputBoxBgColor"
        android:ems="10"
        android:textAppearance="@style/InputBoxTextStyle"
        android:textColor="#99000000"
        android:textColorHint="#99000000"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/InputBoxTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="234dp"
        android:background="@color/inputBoxBgColor"
        android:ems="10"
        android:textAppearance="@style/InputBoxTextStyle"
        android:textColor="#99000000"
        android:textColorHint="#99000000"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/InputBoxTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPasswordAgain"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="434dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="150dp"
        android:background="@color/inputBoxBgColor"
        android:ems="10"
        android:textAppearance="@style/InputBoxTextStyle"
        android:textColor="#99000000"
        android:textColorHint="#99000000"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/InputBoxTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordAgain" />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="31dp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/roboto"
        android:text="@string/create"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>