<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SettingsFragment"
    android:layout_marginStart="17dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="17dp">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/roboto"
            android:text="@string/notifications"
            android:textColor="#757575"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <androidx.cardview.widget.CardView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textSurname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="Иванова"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/profileImage"
                    app:layout_constraintTop_toBottomOf="@+id/textName" />

                <TextView
                    android:id="@+id/textName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto"
                    android:text="Мария"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/profileImage"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonChange"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_margin="1dp"
                    android:background="@drawable/button_shape"
                    android:text="Редактировать профиль"
                    android:textAppearance="@style/InputBoxTextStyle"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/profileImage" />

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="17dp"
                    android:src="@drawable/settings_photo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/mail"
                    android:textColor="#757575"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/userEmail"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto"
                    android:text="marya78@gmail.com"
                    android:textColor="#151515"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textEmail" />

                <Button
                    android:id="@+id/changeEmailButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:fontFamily="@font/roboto"
                    android:foregroundGravity="bottom"
                    android:text="@string/change"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/password"
                    android:textColor="#757575"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/userPassword"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto"
                    android:text="•••••••••"
                    android:textColor="#151515"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textPassword" />

                <Button
                    android:id="@+id/changePasswordButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:fontFamily="@font/roboto"
                    android:foregroundGravity="bottom"
                    android:text="@string/change"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>